--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -17,6 +17,7 @@
                     <connections>
                         <segue destination="XQk-6b-TgA" kind="relationship" relationship="viewControllers" id="8Ep-xP-hB2"/>
                         <segue destination="h4f-QW-1pM" kind="relationship" relationship="viewControllers" id="VgD-ZM-Yg4"/>
+                        <segue destination="oke-mV-5s3" kind="relationship" relationship="viewControllers" id="EXB-LM-gIl"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tHB-dI-2UD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -942,6 +943,39 @@
             </objects>
             <point key="canvasLocation" x="181" y="-878"/>
         </scene>
+        <!--Scores View Controller - Scores View Controller-->
+        <scene sceneID="cfY-ir-3hF">
+            <objects>
+                <viewController title="Scores View Controller" id="oke-mV-5s3" customClass="ScoresViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="c3p-zL-S8j"/>
+                        <viewControllerLayoutGuide type="bottom" id="qBg-b8-3LV"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="b2x-Tu-L4D">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fYp-2H-flc">
+                                <rect key="frame" x="0.0" y="20" width="320" height="411"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Scores" image="scores" id="rKD-wl-Fro"/>
+                    <navigationItem key="navigationItem" id="WjM-6g-7rz"/>
+                    <connections>
+                        <outlet property="scoresTextView" destination="fYp-2H-flc" id="Khd-Kz-P0Y"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="b8s-Xe-R42" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="186" y="433"/>
+        </scene>
         <!--Navigation Controller - Set-->
         <scene sceneID="q5R-KR-kNy">
             <objects>
@@ -965,6 +999,7 @@
     <resources>
         <image name="cardback" width="64" height="96"/>
         <image name="playingcards" width="30" height="30"/>
+        <image name="scores" width="30" height="30"/>
         <image name="setcards" width="30" height="30"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
