Assignment 3, Extra Task 3
Include the ability to sort the scores shown in the Extra Credit above
by last played, score or game duration.

--- a/Matchismo/Base.lproj/Main.storyboard
+++ b/Matchismo/Base.lproj/Main.storyboard
@@ -845,18 +845,6 @@
                                     <action selector="touchDealButton:" destination="a8q-C9-2NK" eventType="touchUpInside" id="ET9-oI-Vu2"/>
                                 </connections>
                             </button>
-                            <segmentedControl opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="uqD-rd-J2Z">
-                                <rect key="frame" x="255" y="388" width="45" height="29"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <segments>
-                                    <segment title="2"/>
-                                    <segment title="3"/>
-                                </segments>
-                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <connections>
-                                    <action selector="changeModeSelector:" destination="a8q-C9-2NK" eventType="valueChanged" id="LLo-iD-O0I"/>
-                                </connections>
-                            </segmentedControl>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="2E0-Tl-6nc">
                                 <rect key="frame" x="68" y="358" width="184" height="21"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -885,7 +873,6 @@
                     </navigationItem>
                     <connections>
                         <outlet property="flipDescription" destination="2E0-Tl-6nc" id="wlz-Me-QVa"/>
-                        <outlet property="modeSelector" destination="uqD-rd-J2Z" id="VMZ-4N-H30"/>
                         <outlet property="scoreLabel" destination="oeM-KD-Jqa" id="IOr-4a-jAk"/>
                         <outletCollection property="cardButtons" destination="gaa-iE-zdL" id="zFI-Nl-QjO"/>
                         <outletCollection property="cardButtons" destination="m7I-hs-jbI" id="zG5-Wa-XLe"/>
@@ -963,6 +950,36 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h8e-dJ-AFS">
+                                <rect key="frame" x="20" y="401" width="63" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="By Score">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByScore" destination="oke-mV-5s3" eventType="touchUpInside" id="haU-t7-FcP"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THK-ET-KSZ">
+                                <rect key="frame" x="133" y="401" width="55" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="By Date">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByDate" destination="oke-mV-5s3" eventType="touchUpInside" id="hK0-sC-4YI"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0T3-It-g5F">
+                                <rect key="frame" x="219" y="401" width="81" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="By Duration">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="sortByDuration" destination="oke-mV-5s3" eventType="touchUpInside" id="g7v-2l-3he"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
